[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
"local-build" = []

[profile.dev]
overflow-checks = false
[profile.test]
overflow-checks = false

[dependencies]
contest = {path = "../contest"}